--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
   <h1> About Me</h1>
   <p>I was born in Melbourne in 1998. My family background is Austrian and Italian. In 2016, I graduated from Wesley College and obtained my VCE. I have a Certificate II in Electrotechnology. I speak fluent English but would love to learn another language one day. I have a 6-month-old puppy named Loki. He is an American Staffy Cross, and we rescued him from the pound in February of this year. I am not sure Loki was the most appropriate name for him as Loki is the “god of mischief”. Consequently, he is always up to no good. </p>
 
+  <h1> IT Experience </h1>
+  <p>
+My interest in IT spans several areas. I am mostly interested in how programs are created and what happens in the back end. I am eager to understand how I can create programs and implement them to benefit everyday life. My interest in IT started when I was 13 years old, and my parents would call up an IT professional to fix their computers in the house as they ran a small business. I would always watch as the IT “guy” would somehow magically fix all the problems that crippled my dad's business when the computers weren’t working. My experience is basic and self-taught. I have never had any formal training experience. My knowledge comes from growing up with technology and learning the basics at school and on YouTube.
 
+I choose to come to RMIT for several reasons. Growing up in Melbourne, I had heard that RMIT was one of the best universities for technology. I saw a lot of advertisements and when I looked up what courses to study for IT, RMIT best suited my educational goals. RMIT offers many online courses, and as I currently live in Sydney this is best suited to my need for flexibility.
+
+I expect to learn a strong overview of what information technology is. As I have already learned, there are so many different areas that IT covers. I would like to graduate with the right skills to be able to create a website and understand how IT is used to solve modern-day problems. Additionally, I want to develop a strong understanding of how to do basic programming. By completing this degree, I hope to find what field of IT interests me most and which field I wish to pursue after university.
+</p>
+<h1></h1>
+<p></p>
 </div>
 
 
