--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@ I choose to come to RMIT for several reasons. Growing up in Melbourne, I had hea
 
 I expect to learn a strong overview of what information technology is. As I have already learned, there are so many different areas that IT covers. I would like to graduate with the right skills to be able to create a website and understand how IT is used to solve modern-day problems. Additionally, I want to develop a strong understanding of how to do basic programming. By completing this degree, I hope to find what field of IT interests me most and which field I wish to pursue after university.
 </p>
+<h1>Ideal Job</h1>
+<p>https://www.linkedin.com/jobs/view/3120939129/?alternateChannel=search&refId=TOJxaYDLvf%2FF3%2FO%2BLgZ8DQ%3D%3D&trackingId=tcVAxdX2QX%2BbXhvD5%2FV0WA%3D%3D</p>
+
+
+<p>Snapshot:</p>
+
+<p>Senior Software Developer</p>
+
+<p>A description of my Ideal job is as follows:</p>
+
+<p>The Senior Software Developer will be in the middle of all internal tech activity, they will be responsible for creating tools that will allow the analytics team to develop and grow their user base and increase the retention of the users. The developer will oversee the full software development lifecycle, including meeting with stakeholders, gathering requirements, design, development, test, deployment, documentation and user training. They will be involved in the front-end and back-end of full-stack web development. They will be involved in problem-solving and debugging existing tools. They will work with others to grow the software engineering team.</p>
+
+<p>The position of Senior Software Developer is appealing to me as I wish to be part of creating tools and rolling out programs that have been co-created with a team of people, from start to finish. Being involved in all aspects from front end to back end, as well as the benefits and company culture that accompanies this role is extremely appealing to me and something I aspire to be part of one day.</p>
+
+<p>Skills required for this role include having excellent communication skills with both technical and non-technical individuals. The job also requires the ability to manage projects from start to finish and deliver on time. The experience required is a minimum of 2 years of Python in the workplace, and strong hands-on experience with Flask or Django which includes building REST APIs. Strong hands-on experience with JavaScript, HTML and CSS is also required. This job does not state any tertiary qualifications are needed but I do imagine that a degree in Computer Science and a strong portfolio will help contribute to meeting the criteria of this role.</p>
+
+<p>I currently possess soft skills that would help contribute to this job, which include having good communication skills with non-technical individuals. I am also able to manage smaller projects in the workplace from start to finish. An example of this is how I launched an IKEA for Business Ambassador project, that aimed to increase the awareness of a business throughout the store. The requirement I am working on is the basics of programming using Python and HTML, which I will develop continuously throughout my career.
+</p>
+
+<p>My plan to achieve the necessary skills is to transfer my degree over to Computer Science once I have completed my first year of studies. Computer Science offers a large variety of programming languages that can be learnt including Python, JavaScript, CSS and HTML.  Whilst studying for this degree I aim to find work experience that will help broaden my portfolio and gain the strong workplace knowledge that I will need to get into my ideal dream job and achieve my objectives. I will continue to build on my programming skills, hoping to be knowledgeable and familiar with more than one programming language. I will continue to work on my communication skills, as I learn more about programming, I will be better equipped to be able to communicate with other professionals in my field. </p>
+
+<h1></h1>
+<p></p>
+<h1></h1>
+<p></p>
+<h1></h1>
+<p></p>
 <h1></h1>
 <p></p>
 </div>
