--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </nav>
 
 <div class="text-box">
-  <h1> About Me</h1>
+  <h2> About Me</h2>
   <p>I was born in Melbourne in 1998. My family background is Austrian and Italian. In 2016, I graduated from Wesley College and obtained my VCE. I have a Certificate II in Electrotechnology. I speak fluent English but would love to learn another language one day. I have a 6-month-old puppy named Loki. He is an American Staffy Cross, and we rescued him from the pound in February of this year. I am not sure Loki was the most appropriate name for him as Loki is the “god of mischief”. Consequently, he is always up to no good. </p>
 
-  <h1> IT Experience </h1>
+  <h2> IT Experience </h2>
   <p>
 My interest in IT spans several areas. I am mostly interested in how programs are created and what happens in the back end. I am eager to understand how I can create programs and implement them to benefit everyday life. My interest in IT started when I was 13 years old, and my parents would call up an IT professional to fix their computers in the house as they ran a small business. I would always watch as the IT “guy” would somehow magically fix all the problems that crippled my dad's business when the computers weren’t working. My experience is basic and self-taught. I have never had any formal training experience. My knowledge comes from growing up with technology and learning the basics at school and on YouTube.
 
@@ -35,7 +35,7 @@ I choose to come to RMIT for several reasons. Growing up in Melbourne, I had hea
 
 I expect to learn a strong overview of what information technology is. As I have already learned, there are so many different areas that IT covers. I would like to graduate with the right skills to be able to create a website and understand how IT is used to solve modern-day problems. Additionally, I want to develop a strong understanding of how to do basic programming. By completing this degree, I hope to find what field of IT interests me most and which field I wish to pursue after university.
 </p>
-<h1>Ideal Job</h1>
+<h2>Ideal Job</h2>
 <p>https://www.linkedin.com/jobs/view/3120939129/?alternateChannel=search&refId=TOJxaYDLvf%2FF3%2FO%2BLgZ8DQ%3D%3D&trackingId=tcVAxdX2QX%2BbXhvD5%2FV0WA%3D%3D</p>
 
 
@@ -56,14 +56,57 @@ I expect to learn a strong overview of what information technology is. As I have
 
 <p>My plan to achieve the necessary skills is to transfer my degree over to Computer Science once I have completed my first year of studies. Computer Science offers a large variety of programming languages that can be learnt including Python, JavaScript, CSS and HTML.  Whilst studying for this degree I aim to find work experience that will help broaden my portfolio and gain the strong workplace knowledge that I will need to get into my ideal dream job and achieve my objectives. I will continue to build on my programming skills, hoping to be knowledgeable and familiar with more than one programming language. I will continue to work on my communication skills, as I learn more about programming, I will be better equipped to be able to communicate with other professionals in my field. </p>
 
-<h1></h1>
-<p></p>
-<h1></h1>
-<p></p>
-<h1></h1>
-<p></p>
-<h1></h1>
-<p></p>
+<h2>Profile</h2>
+<h1>1.	Myers-Briggs test</h1>
+
+<p>Protagonist</p>
+<p>ENFJ-T</p>
+<p>Diplomat</p>
+<p>Social Engagement</p>
+
+<p>“Protagonists (ENFJs) feel called to serve a greater purpose in life. Thoughtful and idealistic, these personality types strive to have a positive impact on other people and the world around them. They rarely shy away from an opportunity to do the right thing, even when doing so is far from easy.” (Introduction | Protagonist (ENFJ) Personality | 16Personalities, 2022)</p>
+
+<h1>2.	Learning Style Test </h1>
+
+<p>Auditory/Tactile learner!</p>
+
+<p>“If you are an auditory learner, you learn by hearing and listening. You understand and remember things you have heard. You store information by the way it sounds, and you have an easier time understanding spoken instructions than written ones. You often learn by reading out loud because you have to hear it or speak it to know it.” (What's Your Learning Style? 20 Questions, 2022)</p>
+<h1>3.	Creativity Test</h1>
+
+<p>“Your creativity is a "work in progress." You've had some successes, so now it's time to let loose and stretch yourself. Share your ideas and perspectives with others and ask them how they view problems. Adopt a collaborative approach to problem finding, and work actively with others to create and innovate. The tools and resources below will help you get to the next level of creativity” (How Creative Are You?:, 2022) </p>
+
+<p>The results from the above test suggest that in a group I tend to be a leader, a person that is open to new ideas but also likes following processes in a methodical order. I learn best by hearing and listening to what people say. I always want what is best for people and I am not scared to tackle projects whatever the size may be, whether it takes several days or several years. While these tests are extremely useful in group settings, results can be skewed depending on your mood while taking the test, thus results should be taken with a grain of sault an not entirely replied on. </p>
+
+<p>The results provide an inside into my possible behaviour when working in a team. It is important for me to consider the results and take them into account when forming a team. I have noted that I am good at communicating with others and listening to what others have to say. I also learn best by hearing, so this means that in group work when we have a meeting, I will take more in than if we were to communicate via email or text. I will use my strengths to help find common ground with my group members and help problem solve by thinking outside the box. I hope to use some of my skills to inspire others in the team, helping each other grow into our best selves. </p>
+
+<p>The information gathered from these tests will assist me in finding what type of people compliment my learning style and personality traits. I will also make sure that I will not negatively affect the dynamic of the group if there were clashes on how some people learn and operate. During team projects, I will adapt to how each group member works.</p>
+
+<h1>Project Idea</h1>
+<p>TradeNetwork is a project that will aim to connect business owners, tradesmen, apprentices, and customers through a social media-like platform that can be accessed via the Internet or an App. Whether it is an apprentice looking for their first company, or a customer looking for a trusted tradesman to fix their broken toilet, it will all be in the one place. TradeNetwork gives businesses the ability to display their handy work and show potential customers what quality work they have produced in the past. Additionally, it provides a platform for a tradesperson to show their life experience and display their licenses and certifications and the work they have completed. This will be completed by creating a website that is not just limited to just job advertisements but is also a platform where individuals or companies can share their “profile” that can be seen by the public. </p>
+
+<p>TradeNetwork serves as an extremely useful project. The construction industry in Australia creates over $360 billion in revenue per annum and has a projected annual growth of 2.4% over the next five years. This indicates that the construction industry in Australia alone is large and has many employers and businesses within the industry. Having a website that can provide the user with convenient information depending on what they are looking for is crucial. Instead of spending time searching different parts of the web for tradespeople that maybe not be appropriate, it would be much more convenient to have everything you are looking for on one website. TradeNetwork is not limited to just job postings but also networking and a place to show your skills if you wish. (Construction, 2022)</p>
+
+<p>TradeNetwork aims to be an efficient and innovative way of connecting tradespeople across the world. TradeNetwork will help find the tradesperson customer or employers are looking for. This project will help reduce time and present options that the user can choose from. Individuals can display a profile that will highlight what field they are in, their work experience and whether they are seeking new employment, all of which will attract the next client or employer. Within this feature, users can display the licenses they hold, which is important for machine operation or to work on gas or electricity.  There are a lot of networking opportunities open to each user of the website. Features of this service include a Job board tab on the website, where construction companies are seeking new workers, and a tradesperson that is seeking a new role can look through this job board and see what companies are offering. The tradesperson will also get a good understanding of the company culture given the company posting the role will have to have a profile created and fill out some mandatory information. The more that is filled out, the more desirable the company will look to potential employees. This feature can also help show builders' styles, as a company overall or as an individual tradesman. Another feature will be a “search by a company or tradesman” tab. This can be used by individuals looking to renovate their house or a user that requires a light to be fixed. The individual can fill out some of the search filters provided by the TradeNetwork, which include but are not limited to, location, type of job, the period available, budget and even a rating. This way TradeNetwork will display information to the individual that is relevant and related to their needs, rather than the user having to sort through irrelevant profiles. TradeNetwork will assist apprentices that may be already halfway through their apprenticeship but are looking to explore a new sector of the industry. An apprentice may have started their account before wanting to move companies, growing their network through their experiences at work. When they search the Jobs tab and apply for a job in another field, a potential employer can see their profile and connections, reviews of their workmanship and even ratings from customers they might have interacted with. This can enhance their employability, by providing the employer with credible information from a real-life customer. Instant messaging is a significant aspect of what this project aims to achieve. The website will have a chat box like that of Facebook, LinkedIn and other social media platforms. This will help make it convenient to connect to the TradeNetwork users in an informal way. TradeNetwork will be a downloadable mobile phone application as well as a website. This will make it convenient for the user to access their account on the move, and not limit the usability of the platform.
+</p>
+
+<p>A professional laptop or computer is required to make this project come to life. Additionally, a GitHub repository will be required to track progress and backup files saved for the project, this doubles as an FTP. A text editor like Atom will be needed to write the files. A solid internet connection is needed to access recourse on the web and save data to the Cloud. A graphics editor like Photoshop or Illustrator will be required to make the website look appealing to the user base. An analytics tool like Google Analytics or open web analysis will help steer the project to the correct target audience seeing what gets the most views and attention. </p>
+<h1> Skills Required </h1>
+
+<p>•	Programming – HTML is the standardised language to format websites. CSS is a language connected to HTML to allow the user to create the website look by editing fonts, colours and layouts.</p>
+
+<p>•	Improving knowledge will be an important skill when completing this project, being able to learn from your mistakes and work more efficiently is crucial to success.</p>
+
+<p>•	Search engine optimisation will be crucial to the project to learn what attracts the users, this can be outsourced or learnt.</p>
+
+<p>•	Time management will be needed to plan out how the project will be executed and help develop the service one step at a time.
+</p>
+<p>If the project is successful, TradeNetwork will be used to connect users across the country for all trade-related needs. This will help businesses and tradespeople grow professionally. Having everything available in one place will give the user an effortless way to find what they are looking for. TradeNetwork will eliminate the time it takes to search the internet for a potential employee, employer or business. The project will be a “one-stop-shop” where users have a variety of options at their fingertips to grow themselves and get good quality service. </p>
+
+<h1>Reference Lists </h1>
+<p>•	 16Personalities. 2022. Introduction | Protagonist (ENFJ) Personality | 16Personalities. [online] Available at: <https://www.16personalities.com/enfj-personality> [Accessed 19 June 2022].</p>
+<p>•	Educationplanner.org. 2022. What's Your Learning Style? 20 Questions. [online] Available at: <http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=7&V=6&T=7> [Accessed 19 June 2022].</p>
+<p>•	Mindtools.com. 2022. How Creative Are You?:. [online] Available at: <https://www.mindtools.com/pages/article/creativity-quiz.htm> [Accessed 19 June 2022].</p>
+<p>•	National Industry Insights Report. 2022. Construction. [online] Available at: <https://nationalindustryinsights.aisc.net.au/industries/construction> [Accessed 19 June 2022].</p>
 </div>
 
 
