--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <a href="index.html"><img src="me.jpg"></a>
     <div class="nav-links">
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="">Harrison Mori</a></li>
         <li><a href="">Ideal Job</a></li>
         <li><a href="">Profile</a></li>
         <li><a href="">Project Idea</a></li>
-        <li><a href="">Reference Lists </a></li>
+        <li><a href="">Reference List </a></li>
       </ul>
     </div>
   </nav>
